--- a/news.txt
+++ b/news.txt
@@ -1,6 +1,2 @@
-📰 Обновление 0.1.2
+📰 Обновление 0.1 alpha
 - Добавлена кнопка "Новости"
-- Теперь навоз можно сдавать в сарай
-- Улучшено управление
-
-🐄 Следующее обновление — корова-донатер
